automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,16 +273,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'malta'"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'malta']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +304,7 @@
     "countries.append('malta')\n",
     "\n",
     "countries\n",
-    "countries.pop()\n",
+    "\n",
     "\n"
    ]
   },
@@ -334,11 +346,6 @@
     }
    ],
    "source": [
-    "countries.append('Thailand')\n",
-    "\n",
-    "countries\n",
-    "countries.pop()\n",
-    "countries\n",
     "\n"
    ]
   },
