automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -340,13 +340,13 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
+    "countries.append('Thailand')\n",
     "countries\n"
    ]
   },
