--- a/index.ipynb
+++ b/index.ipynb
@@ -347,7 +347,8 @@
    ],
    "source": [
     "countries.append('Thailand')\n",
-    "countries\n"
+    "countries.pop()\n",
+    "\n"
    ]
   },
   {
