--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,8 @@
    "source": [
     "countries.append('Thailand')\n",
     "countries.pop()\n",
-    "\n"
+    "\n",
+    "countries"
    ]
   },
   {
