--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -340,16 +340,13 @@
        " 'Thailand']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries.append('Thailand')\n",
-    "countries.pop()\n",
-    "\n",
-    "countries"
+    "countries\n"
    ]
   },
   {
