automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -291,10 +291,13 @@
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
+       " 'malta',\n",
+       " 'Thailand',\n",
+       " 'Thailand',\n",
        " 'malta']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,6 +307,7 @@
     "countries.append('malta')\n",
     "\n",
     "countries\n",
+    "\n",
     "\n",
     "\n"
    ]
