automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -341,16 +341,17 @@
        " 'South Korea',\n",
        " 'malta',\n",
        " 'Thailand',\n",
-       " 'Thailand']"
+       " 'Thailand',\n",
+       " 'malta']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries\n"
+    "countries"
    ]
   },
   {
