automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries=set # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
+    "unique_countries=set() # ['Canada', 'Italy', 'USA', 'Mexico', 'Finland', \n",
     "#'Malta', 'Morocco', 'Croatia', 'Argentina', 'South Korea']"
    ]
   },
