--- a/index.ipynb
+++ b/index.ipynb
@@ -578,7 +578,7 @@
    "outputs": [],
    "source": [
     "num_of_repeats = None\n",
-    "num_of_repeats=len(countries)-len\n",
+    "num_of_repeats=len(countries)-len()\n",
     "\n",
     "num_of_repeats # 3"
    ]
