--- a/index.ipynb
+++ b/index.ipynb
@@ -571,14 +571,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_of_repeats = None\n",
-    "num_of_repeats=len(countries)-len()\n",
+    "num_of_repeats=len(countries)-len(unique_countries)\n",
     "\n",
     "num_of_repeats # 3"
    ]
